upate: add target to link

--- a/blogs.html
+++ b/blogs.html
@@ -29,7 +29,7 @@
     </header>
 
     <div class="blog-content">
-      <h2><a href="blog1.html">get started with graphql</a></h2>
+      <h2><a href="blog1.html" target="_blank">get started with graphql</a></h2>
       <small>September 20,2022</small>
       <p>
         skip if you don’t like intros Few days back, I was tasked on a project.
